--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "sass": "^1.64.1",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "waterfall.js": "^1.1.0"
   }
 }
