--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "animate.css": "^4.1.1",
+    "masonry-layout": "^4.2.2",
     "sass": "^1.64.1",
     "scss": "^0.2.4",
     "waterfall.js": "^1.1.0"
